# D-HASH

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.runner  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.repro.txt
 .github/workflows/: ci.yml
.github/workflows/: ci.yml
benchmarks/: runner.py  workloads.py
benchmarks/generators/: __init__.py
docker/: Dockerfile.runner
docs/: README.md  README_kr.md  REPORT_KR.md  algorithm.md  architecture.md  experiments.md  paper_alignment.md
docs/design/: 01_overview.md  02_hashing.md  03_router.md  03_routing_guard_phase.md  04_guard.md  04_routing_window.md  05_alternate.md  05_measurement.md  06_window.md  07_stats.md
docs/reference/: config_schema.md  glossary.md
docs/reproduction/: 01_quickstart.md  02_benchmark.md  02_datasets.md  03_benchmark.md  03_results_format.md  04_results_format.md
docs/troubleshooting/: 01_alternate.md  01_alternate_selection.md  02_guard.md  02_guard_phase.md  03_routing_window.md  03_window.md  04_weighted_percentile.md  README.md
results/: env_metadata.csv  synthetic_ablation.csv  synthetic_pipeline_sweep.csv  synthetic_zipf_results.csv
scripts/: benchmark.sh  lint.sh  test.sh
src/benchmarks/: README.md  __init__.py  runner.py
src/benchmarks/generators/: zipf.py
src/dhash/: __init__.py  cli.py  config.py  hashing.py  stats.py
src/dhash/hashing/: __init__.py  core.py
src/dhash/measure/: __init__.py  metrics.py  percentile.py
src/dhash/routing/: __init__.py  alternate.py  guard.py  router.py  window.py
src/dhash/utils/: __init__.py  io.py  random.py  time.py
src/dhash_experiments/: algorithms.py  bench.py  cli.py  config.py  stages.py  workloads.py
src/dhash_repro/: __main__.py  cli.py  experiment.py
src/dhash_repro/benchmark/: collectors.py
src/dhash_repro/clients/: redis_client.py
src/dhash_repro/config/: defaults.py
src/dhash_repro/metrics/: collectors.py
src/dhash_repro/persistence/: writer.py
src/dhash_repro/scripts/: preprocess_ebay.py  preprocess_nasa.py
src/dhash_repro/workloads/: __init__.py  zipf.py
tests/: test_alternate_selection.py  test_guard_phase.py  test_hashing.py  test_routing_window.py  test_stats.py  test_weighted_percentile.py
tests/dhash/: test_stats.py
tests/dhash/hashing/: test_core.py
tests/dhash/routing/: test_alternate.py  test_guard.py  test_router.py  test_window.py
tests/dhash_repro/clients/: test_redis_client.py
tests/hashing/: test_core.py
tests/routing/: test_alternate.py  test_guard.py  test_router.py  test_window.py
