[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhash"
version = "0.1.0"
description = "D-HASH: Dynamic Hot-key Aware Scalable Hashing (client-side routing)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "D-HASH Authors" }]
keywords = ["distributed-cache", "consistent-hashing", "hot-key", "routing", "benchmark"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# 런타임 의존성: 코드에서 실제로 import 하는 것만 최소로
dependencies = [
  "numpy>=1.24",
  "xxhash>=3.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
dhash = "dhash.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dhash*"]

# -------------------------
# Pytest
# -------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

# -------------------------
# Ruff (lint + format)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["dhash", "benchmarks"]
combine-as-imports = true

# -------------------------
# Mypy (optional)
# -------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
packages = ["dhash"]
