[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhash"
version = "0.1.0"
description = "D-HASH: Dynamic Hot-key Aware Scalable Hashing"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bang Hyeok" }
]

dependencies = [
    "redis==6.4.0",
    "hiredis==3.3.0",
    "xxhash==3.6.0",
    "pandas==2.3.3",
    "numpy==2.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5"
]

[project.scripts]
dhash-repro = "dhash_repro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
